--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ ul{
 
 .container h1{
     margin: auto;
-    width: 60%;
+    width: fit-content;
 }
 
 .container a{
@@ -32,7 +32,7 @@ ul{
 }
 
 .container p{
-    width: 30%;
+    width: 46%;
     text-align: center;
     display:inline-block;
 }
